# vmware-mcp-server

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.mcp  Makefile  README.md  config.yaml.sample  debug_vcenter_standalone.py  docker-compose.yml  env.example  fastmcp_server.py  get_vm_info.py  list_vm.py  list_vms.py  main.py  minimal_mcp_server.py  pyproject.toml  requirements.txt  server.py  simple_fastmcp_server.py  test_custom_vm.py  test_fastmcp_vm.py  test_mcp_client.py  test_mcp_simple.py  test_mcp_vm_creation.py  test_minimal.py  test_smart_parser.py  vm_creation_test.py
.cursor/rules/: python.mdc
instructions/: maintenance-vmware.md
mcp-server/: README.md  __init__.py  base.py  config.py  connection.py  debug_templates.py  get_all_vms.py  get_vm_info.py  helpers.py  host_info.py  list_vm.py  list_vms.py  maintenance.py  monitoring.py  parser_helpers.py  personalities.py  power.py  power_management.py  power_vm.py  pyproject.toml  server.py  test_connection.py  test_power_management.py  test_server.py  test_templates_docker.py  vm_creation.py  vm_info.py  vm_info_rest.py  vm_management.py
mcp-server-vmware/: Dockerfile  Makefile  README.md  __init__.py  pyproject.toml  requirements.txt  server.py  test_power_management.py  vm_operations.py
mcp-server/helpers/: __init__.py  parser.py  power_parser.py  vm_parser.py
scripts/: test_connection.py
src/: __init__.py  __main__.py  config.py  mcp_server.py  vmware.py
testing_pyvmomi/: Dockerfile  Makefile  README.md  requirements.txt  test_vm_operations.py
tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_maintenance.py  test_mcp_server.py  test_vmware.py
