[project]
name = "vmware-mcp-server"
version = "0.1.0"
description = "VMware vSphere MCP Server for listing and managing VMs"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "requests>=2.25.0",
    "urllib3>=1.26.0",
    "pyVmomi==9.0.0.0",
    "vmware-vapi-common-client==2.61.2",
    "vmware-vapi-runtime==2.61.2",
    "vmware-vcenter==9.0.0.0",
    "mcp",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp-server"]

[tool.uv]
dev-dependencies = []
