[project]
name = "vmware-mcp-server"
version = "1.0.0"
description = "VMware vCenter MCP Server using pyvmomi"
authors = [
    {name = "VMware MCP Server", email = "dev@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyvmomi>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "test_*"] 