[project]
name = "vmware-mcp-server"
version = "0.1.0"
description = "MCP server for VMware vSphere VM management"
authors = [
    {name = "David Roman", email = "david@example.com"},
]
dependencies = [
    "mcp>=1.9.4",
    "requests>=2.25.0",
    "urllib3>=1.26.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
] 