[project]
name = "vmware-vcenter-mcp-server"
version = "0.1.0"
description = "Clean MCP server using only vmware-vcenter package"
authors = [
    {name = "VMware MCP Team"}
]
dependencies = [
    "vmware-vcenter==9.0.0.0",
    "requests",
    "urllib3",
    "mcp",
]
requires-python = ">=3.10"

[tool.uv]
dev-dependencies = []

[tool.setuptools]
py-modules = [
    "server",
    "vm_info", 
    "power_management",
    "vm_creation",
    "config",
    "test_power_management",
    "test_server",
    "get_all_vms"
] 